# gravity-gallery

./: .env.example  .gitignore  App.tsx  App_fixed.tsx  FILE_LIST.md  QUICK_FIX_GUIDE.md  README.md  SORTING_FIX_README.md  VISUAL_COMPARISON.md  constants.ts  constants_fixed.ts  index.html  metadata.json  package-lock.json  package.json  run-dev-rust.bat.example  run-dev.bat.example  server.py  server_fixed.py  types.ts  types_fixed.ts  vite.config.ts
components/: ControlPanel.tsx  FileBrowser.tsx  GalleryView.tsx  Icon.tsx  Landing.tsx  SettingsModal.tsx  SettingsModal_fixed.tsx
rust-server/: Cargo.toml
rust-server/src/: main.rs
utils/: imageUtils.ts  imageUtils_fixed.ts
