[package]
name = "gravity-gallery-rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
image = "0.24" # 用于读取图片尺寸
walkdir = "2"
mime_guess = "2"
rand = "0.8"
natord = "1.0.9"
path-clean = "1.0"
pathdiff = "0.2"
dotenvy = "0.15"
futures = "0.3"
anyhow = "1.0"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-util = { version = "0.7", features = ["io"] }
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
